testsuite/tests/contrib/lkt_semantic/invalid_enum_ref/test.out
Resolving test.lkt
==================
test.lkt:1:17: error: Cannot find entity `NoSuchType` in this scope
1 | @invalid val a: NoSuchType.some_field = raise PropertyError
  |                 ^^^^^^^^^^

Id   <RefId "PropertyError" test.lkt:1:47-1:60>
     references <StructDecl prelude: "PropertyError">

